force-app/main/default/objects/Customer_feedback__c/Customer_feedback__c.object-meta.xml
<CustomObject>
    <label>Customer feedback</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Customer feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>