force-app/main/default/objects/Customer_feedback__c/fields/Booking_ID__c.field-meta.xml
<CustomField>
    <fullName>Booking_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Booking ID</label>
    <referenceTo>Hotel_Booking__c</referenceTo>
    <relationshipLabel>Customer feedbacks</relationshipLabel>
    <relationshipName>Customer_feedbacks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>