force-app/main/default/objects/Customer_feedback__c/fields/Checked_out__c.field-meta.xml
<CustomField>
    <fullName>Checked_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked out</label>
    <type>Checkbox</type>
</CustomField>