force-app/main/default/objects/Customer_feedback__c/fields/Cleaning_service_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_service_Remarks__c</fullName>
    <label>Cleaning service Rating (Numeric)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>