force-app/main/default/objects/Customer_feedback__c/fields/Customer_Satisfaction_index__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_index__c</fullName>
    <formula>(Cleaning_service_Remarks__c  +  Food_Quality_Rating__c + Payment_procedure_and_see_off__c + welcome_and_Hospitality_Service_Rating__c + Overall_Rating_of_the_hotel__c )/5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Satisfaction index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>