force-app/main/default/objects/Customer_feedback__c/fields/Food_Quality_Rating__c.field-meta.xml
<CustomField>
    <fullName>Food_Quality_Rating__c</fullName>
    <label>Food Quality Rating (Numeric)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>