force-app/main/default/objects/Customer_feedback__c/fields/Guest_name__c.field-meta.xml
<CustomField>
    <fullName>Guest_name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Guest name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer feedbacks</relationshipLabel>
    <relationshipName>Customer_feedbacks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>