force-app/main/default/objects/Customer_feedback__c/fields/Hotel_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name_c__c</fullName>
    <formula>Hotel_name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel_Name__c</label>
    <type>Text</type>
</CustomField>