force-app/main/default/objects/Customer_feedback__c/fields/Overall_Rating_of_the_hotel__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating_of_the_hotel__c</fullName>
    <label>Overall Rating of the hotel (Numeric)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>