force-app/main/default/objects/Customer_feedback__c/fields/Payment_procedure_and_see_off__c.field-meta.xml
<CustomField>
    <fullName>Payment_procedure_and_see_off__c</fullName>
    <label>Payment and see off rating (Numeric)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>