force-app/main/default/objects/Customer_feedback__c/fields/welcome_and_Hospitality_Service_Rating__c.field-meta.xml
<CustomField>
    <fullName>welcome_and_Hospitality_Service_Rating__c</fullName>
    <label>welcome and Hospitality Rating (Numeric)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>