force-app/main/default/objects/Customer_feedback__c/validationRules/Checkout_check_box.validationRule-meta.xml
<ValidationRule>
    <fullName>Checkout_check_box</fullName>
    <active>true</active>
    <errorConditionFormula>Not( Checked_out__c )</errorConditionFormula>
    <errorMessage>Click check out box</errorMessage>
</ValidationRule>