force-app/main/default/objects/Customer_feedback__c/validationRules/Rating_range.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_range</fullName>
    <active>true</active>
    <errorConditionFormula>(Food_Quality_Rating__c &lt;0 || Food_Quality_Rating__c &gt;10)|| (Payment_procedure_and_see_off__c &lt;0 ||  Payment_procedure_and_see_off__c &gt;10)|| (welcome_and_Hospitality_Service_Rating__c &lt;0 ||  welcome_and_Hospitality_Service_Rating__c &gt;10)|| (Overall_Rating_of_the_hotel__c &lt;0 || Overall_Rating_of_the_hotel__c &gt;10)||(Cleaning_service_Remarks__c &lt;0 ||Cleaning_service_Remarks__c &gt;10)</errorConditionFormula>
    <errorMessage>Rating Should be in the range 0 -10</errorMessage>
</ValidationRule>